--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -167,25 +167,26 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 30,
             "id": "d590308e",
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "2.0\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# TODO\n",
                 "data = [4, 2, 5, 8, 6]\n",
                 "\n",
-                "desviacion_tipica = np.std(data)\n",
+                "def desviacion (data):\n",
+                "    # Calcular la media\n",
+                "    media = sum(data) / len(data)\n",
+                "    # Cuadrado de las diferencias\n",
+                "    difcuadrados = [(x - media) ** 2 for x in data]\n",
+                "    varianza = sum(difcuadrados) / len(data)\n",
+                "    desviacion_tipica = varianza ** 2\n",
+                "    return desviacion\n",
                 "\n",
-                "print(desviacion_tipica)\n"
+                "\n",
+                "\n",
+                "\n"
             ]
         }
     ],
