--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -167,10 +167,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 4,
             "id": "d590308e",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "2.0\n"
+                    ]
+                }
+            ],
             "source": [
                 "# TODO\n",
                 "data = [4, 2, 5, 8, 6]\n",
@@ -181,10 +189,10 @@
                 "    # Cuadrado de las diferencias\n",
                 "    difcuadrados = [(x - media) ** 2 for x in data]\n",
                 "    varianza = sum(difcuadrados) / len(data)\n",
-                "    desviacion_tipica = varianza ** 2\n",
-                "    return desviacion\n",
+                "    desviacion_tipica = varianza ** 0.5\n",
+                "    return desviacion_tipica\n",
                 "\n",
-                "\n",
+                "print(desviacion(data))\n",
                 "\n",
                 "\n"
             ]
